---- Changes since 1.180 ----
Added button for deleting multiple rules from list.
Added several new access control options for limiting allowed actions, cluster management, and creation and deletion of chains.
---- Changes since 1.200 ----
Additional IPtables modules can now be specified when editing a rule.
---- Changes since 1.240 ----
Protocol numbers can be explicitly entered in a rule, along with the defaults of TCP, UDP and so on.
---- Changes since 1.260 ----
Added a Module Config option to have rule comments stored used the --comment IPtables argument, rather than # comments in the save file.
---- Changes since 1.270 ----
The ICMP rejection type is now settable in all valid chains.
---- Changes since 1.290 ----
On Debian 3.1 systems, IPtables rules are saved in /etc/iptables.up.rules and activated through /etc/network/interfaces, rather than using an init.d script.
---- Changes since 1.350 ----
Added a setup option to configure a firewall for a typical hosting server.
---- Changes since 1.400 ----
Show SNAT and masquerade inputs in custom NAT chains.
---- Changes since 1.440 ----
DNS queries are now allowed when the firewall is setup for web hosting.
Rule coments using --comment containing spaces or - are now properly parsed.
When initializing the firewall, the actual ports for Webmin, Usermin and SSHd are used instead of the standard ports.
Added an option for the UNTRACKED state in rules.
---- Changes since 1.450 ----
Fixed 'Does not equal' option for multiple ports.
---- Changes since 1.470 ----
Disallow rules on virtual interfaces, as they don't work.
---- Changes since 1.490 ----
Removed invalid "Above" options for packet flow rate.
---- Changes since 1.500 ----
Added a button to move rules to another chain.
Added a button to rename an existing custom chain.
---- Changes since 1.510 ----
Better handle the case where a rule has a --comment format description, but # format comments are enabled.