@@ -117,6 +117,10 @@ desc_state=state of connection is $1
 desc_state!=state of connection is not $1
 desc_tos=type of service field is $1
 desc_tos!=type of service field is not $1
+desc_physdev-in=input physical interface is $1
+desc_physdev-in!=input physical interface is not $1
+desc_physdev-out=output physical interface is $1
+desc_physdev-out!=output physical interface is not $1
 desc_conds=If $1
 desc_and=and
 desc_always=Always
@@ -189,6 +193,11 @@ edit_args=Additional parameters
 edit_mods=Additional IPtables modules
 edit_rwith=Reject with ICMP type
 edit_rwithtype=Type $1
+edit_physdevin=Incoming physical interface
+edit_physdevout=Outgoing physical interface
+edit_physdevisin=Packet incoming on bridge interface
+edit_physdevisout=Packet outgoing on bridge interface
+edit_physdevisbridged=Packet is being bridged
 
 save_err=Failed to save rule
 save_echain=Missing or invalid chain to run
@@ -232,6 +241,8 @@ save_espfrom=Invalid starting port for SNAT
 save_espto=Missing or invalid ending port for SNAT
 save_estates=No connection states selected
 save_ecanjump=You are not allowed to use this action
+save_ephysdevin=Missing or invalid incoming physical interface
+save_ephysdevout=Missing or invalid outgoing physical interface
 
 delete_title=Delete Chain
 delete_rusure=Are you sure you want to delete the chain $1 ? $2 rules within it will be deleted.
